# plover_german

./: README.rst  plover_german.py  setup.cfg
