[metadata]
name = plover_german
version = 0.0.1
description = German language system for Plover
long_description = file: README.rst
author = @percidae
author_email = percidae@openmailbox.org
license = GNU General Public License v2 or later (GPLv2+)
url = https://github.com/percidae/plover_german
classifiers =
	Development Status :: 4 - Beta
	Environment :: Plugins
	Intended Audience :: End Users/Desktop
	License :: OSI Approved :: GNU General Public License v2 or later (GPLv2+)
	Operating System :: OS Independent
	Programming Language :: Python :: 3
	Programming Language :: Python :: 3.4
	Programming Language :: Python :: 3.5
	Programming Language :: Python :: 3.6
keywords = plover plover_plugin

[options]
zip_safe = True
install_requires =
	plover>=4.0.0.dev0
py_modules =
	plover_german

[options.entry_points]
plover.system =
  German Stenotype = plover_german
